2012-05-08  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/sparcv9/fpu/multiarch/s_floor-vis3.S: Use
	movxtod instead of popping the value on the stack.

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2012-05-08  Carlos O'Donell  <carlos_odonell@mentor.com>

	* config.h.in: Add HAVE_ARM_PCS_VFP.

2012-05-08  Roland Mc Grath  <roland@hack.frob.com>

        [BZ #13979]
        * include/features.h: Warn if user requests __FORTIFY_SOURCE
        checking but the checks are disabled for any reason.

2012-05-08  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/dl-machine.h: Replace Elf64_XXX with ElfW(XXX)
	and ELF64_R_TYPE with ELFW(R_TYPE).

2012-05-08  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/syscalls.list (pause): Remove.
	(ulimit): Likewise.

	* sysdeps/unix/sysv/syscalls.list (setrlimit): Remove.
	(settimeofday): Likewise.

2012-05-08  Mike Frysinger  <vapier@gentoo.org>

	* inet/arpa/tftp.h (struct tftphdr): Rename th_u to th_u1.  Add
	a struct th_u2 inside the union, and move tu_block/tu_code into
	a new th_u3 union of tu_block/tu_code inside of that.  Move
	th_data[1] into the th_u2 as tu_data[0].  Change tu_stuff[1] to
	tu_stuff[0].  Add a new tu_padding[4] to keep sizeof() the same.
	(th_block): Change to th_u1.th_u2.th_u3.tu_block.
	(th_code): Change to th_u1.th_u2.th_u3.tu_code.
	(th_stuff): Change to th_u1.tu_stuff.
	(th_data): Define.
	(th_msg): Change to th_u1.th_u2.tu_data.

2012-05-07  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

	[BZ #14074]
	* sysdeps/sparc/sysdep.h (SPARC_PIC_THUNK_CALL): New macro.
	(SETUP_PIC_REG): Use it.
	(SETUP_PIC_REG_LEAF): Use it.

2012-05-07  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13885]
	[BZ #13923]
	* sysdeps/i386/fpu/e_expl.S (IEEE754_EXPL): Define conditional on
	USE_AS_EXPM1L.
	(EXPL_FINITE): Likewise.
	(FLDLOG): Likewise.
	(IEEE754_EXPL) [USE_AS_EXPM1L]: Support use as expm1l.