@@ -23,8 +23,8 @@ Version 2.16
   13854, 13871, 13872, 13873, 13879, 13883, 13884, 13885, 13886, 13892,
   13895, 13908, 13910, 13911, 13912, 13913, 13914, 13915, 13916, 13917,
   13918, 13919, 13920, 13921, 13922, 13923, 13924, 13926, 13927, 13928,
-  13938, 13941, 13942, 13963, 13967, 13970, 13973, 13979, 14027, 14033,
-  14034, 14040, 14049, 14055, 14064
+  13938, 13941, 13942, 13963, 13967, 13970, 13973, 13979, 13983, 14027,
+  14033, 14034, 14040, 14049, 14055, 14064
 
 * ISO C11 support:
 
